--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -39,13 +39,17 @@
                 </div>
                 <div class="form-row">
                     <div class="col-lg-6">
-                        <label class="small mb-1" for="{{ form.username.id_for_label }}">Имя пользователя</label>
-                        {{ form.username }}
+                        <label class="small mb-1" for="{{ form.phone.id_for_label }}">Номер телефона</label>
+                        {{ form.phone }}
                     </div>
                     <div class="col-lg-6">
                         <label class="small mb-1" for="form.email.id_for_label">Адрес электронной
                             почты</label>
                         {{ form.email }}
+                    </div>
+                    <div class="col-lg-6">
+                        <label class="small mb-1" for="form.contry.id_for_label">Страна</label>
+                        {{ form.country }}
                     </div>
                 </div>
                 <div class="form-row">
