Добавить измененный файл catalog/product_detail.html

--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -59,7 +59,7 @@
 
                 <div class="card mt-4">
                     <div class="card-header">
-                        Пользователь: @{{ comment.user }}
+                        Пользователь: {{ comment.user }}
                     </div>
                     <div class="card-body"><p class="card-text">{{ comment.text }}</p></div>
                         <div class="card-footer text-center">
