--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -51,7 +51,7 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-            {% if user.is_superuser %}
+            {% if user.is_superuser or user.is_authenticated %}
             <a class="btn btn-outline-success mb-4" href="{% url 'catalog:create' %}">
                 добавить товар
             </a>
@@ -79,12 +79,12 @@
                                href="{% url 'catalog:basket_add' product.id %}">
                                 Отправить в корзину
                             </a>
-                            {% if perms.catalog.can_edit_publication_sign and perms.catalog.can_edit_category and perms.catalog.can_edit_description %}
+                            {% if perms.catalog.can_edit_publication_sign and perms.catalog.can_edit_category and perms.catalog.can_edit_description or user == product.user_owner %}
                             <a class="btn btn-outline-warning btn-block" href="{% url 'catalog:edit' product.id %}">
                                 Редактировать
                             </a>
                             {% endif %}
-                            {% if user.is_superuser %}
+                            {% if user.is_superuser or user == product.user_owner %}
                             <a class="btn btn-outline-danger btn-block" href="{% url 'catalog:delete' product.id %}">
                                 Удалить
                             </a>
